--- a/Portifólio de Projetos/ProjFinal.html
+++ b/Portifólio de Projetos/ProjFinal.html
@@ -9,7 +9,7 @@
 			Projeto Final
 		</h1>
 		<p>
-			<a href="PáginaInicial.html">Página Inicial</a> > <a href="Software.html">Software</a>
+			<a href="index.html">Página Inicial</a> > <a href="Software.html">Software</a>
 		</p>
 		<p>
 			Nome do Projeto:<br>
@@ -25,6 +25,6 @@
 
 		</p>
 
-		<iframe src="http://albumizr.com/a/pd0o" scrolling="no" frameborder="0" allowfullscreen width="500" height="400"></iframe>
+		<iframe src="http://albumizr.com/a/pd0o" allowfullscreen width="500" height="400"></iframe>
 	</body>
 </html>
