--- a/Portifólio de Projetos/Termo.html
+++ b/Portifólio de Projetos/Termo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>"Sistema Termodinâmico"</title>
+        <title>Sistema Termodinâmico</title>
         <meta charset="UTF-8">
     </head>
 
@@ -9,12 +9,15 @@
         <h1>
             Sistema Termodinâmico
         </h1>
-        <a href="PáginaInicial.html">Página Inicial</a> > <a href="ModSim.html">Simulação e Modelagem</a>
+        <a href="index.html">Página Inicial</a> > <a href="ModSim.html">Simulação e Modelagem</a>
         <p>
             Nome do Projeto:<br>
             O resfriamento de uma caipirinha: Temperatura ideal de consumo
         </p>
-        <ul>Competências
+        <p>
+            Competências
+        </p>
+        <ul>
             <li>Equações Diferenciais de Primeira Ordem</li>
             <li>Conhecimento das Leis de Troca de Calor Entre os Corpos</li>
             <li>Trabalho em Equipe</li>
@@ -39,6 +42,6 @@
             através de um termômetro a laser utilizado para medir a temperatura de uma caipirinha,
             fomos capazes de obter os dados presentes no cartaz final de nossa apresentação.
         </p>
-        <img src= "Fotos\cartaz@3x.png" height="400" width="800"/>
+        <img src= "Fotos/cartaz@3x.png" alt="Foto do cartaz do Sistema Termodinâmico de uma caipirinha" height="400" width="800"/>
     </body>
 </html>
