--- a/Portifólio de Projetos/index.html
+++ b/Portifólio de Projetos/index.html
@@ -9,7 +9,7 @@
 	</head>
 
 	<body>
-		<img src="Fotos/insperPNG.png" height=100>
+		<img src="Fotos/insperPNG.png" alt="Logo Insper" height=100>
 		<h1>
 			Página Principal
 		</h1>
