--- a/Portifólio de Projetos/EstacaoMet.html
+++ b/Portifólio de Projetos/EstacaoMet.html
@@ -9,14 +9,16 @@
             Estação Meteorológica
         </h1>
         <p>
-            <a href="PáginaInicial.html">Página Inicial</a> > <a href="Hardware.html">Hardware</a>
+            <a href="index.html">Página Inicial</a> > <a href="Hardware.html">Hardware</a>
         </p>
         <p>
             Nome do Projeto:<br>
 
-            Estação Meteorológica
+            Estação Meteorológica<br><br>
+            Competências:
         </p>
-        <ul>Competências
+
+        <ul>
             <li>Protoboard</li>
             <li>Noções do Cálculo de incertezas do LM35 e do DHT22</li>
             <li>Trabalho em Equipe</li>
