Entrega do dia 14/09

--- a/Portifólio de Projetos/BrinqInf.html
+++ b/Portifólio de Projetos/BrinqInf.html
@@ -9,7 +9,7 @@
 			Brinquedo Infantil
 		</h1>
 		<p>
-			<a href="index.html">Página Inicial</a> > <a href="Hardware.html">Hardware</a>
+			<a href="PáginaInicial.html">Página Inicial</a> > <a href="Hardware.html">Hardware</a>
 		</p>
 		<p>
 			Nome do Projeto:<br>
@@ -27,6 +27,6 @@
 
 		</p>
 
-		<iframe src="http://albumizr.com/a/4IOx" allowfullscreen="" width="800" height="700"></iframe>
+		<iframe src="http://albumizr.com/a/4IOx" scrolling="no" frameborder="0" allowfullscreen="" width="800" height="700"></iframe>
 	</body>
 </html>
