--- a/Portifólio de Projetos/SobreMim.html
+++ b/Portifólio de Projetos/SobreMim.html
@@ -9,7 +9,7 @@
 			Sobre Mim
 		</h1>
 		<p>
-			<a href="index.html">Página Inicial</a>
+			<a href="PáginaInicial.html">Página Inicial</a>
 		</p>
 		<p>
 			Sou Giovanni Ranieri tenho 18 anos e atualmente curso o 2° semestre de engenharia mecatrônica pela faculdade de negócios INSPER. Formado na escola Bandeirantes, tive meu primeiro contato com a programação após fazer um curso online em 2008. Devido ao grande interesse pela área de segurança digital, atualmente estou em um projeto cujo objetivo é a criação de um dispositivo de proteção.
