Entrega do dia 21/09

--- a/Portifólio de Projetos/Mod_Sim.html
+++ b/Portifólio de Projetos/Mod_Sim.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="owl-carousel/owl.carousel.min.css">
         <link rel="stylesheet" href="owl-carousel/owl.theme.css">
         <link rel="stylesheet" href="owl-carousel/owl.transitions.css">
-		<title>Projeto</title>
+		<title>Caipirinha</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/style.css">
 		<!-- Compiled and minified CSS -->
@@ -34,13 +34,43 @@
 
 				<div class="card col s12">
                     <div class="card-image">
-                        <img src="Fotos/ponte.jpg">
+                        <img src="Cartaz@3x.png">
                     </div>
 
 
 					<div class="card-content">
-					    <span class="card-title activator grey-text text-darken-4">Projeto Legal</span>
-					    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					    <span class="card-title activator grey-text text-darken-4">O resfriamento de uma caipirinha: Temperatura ideal de consumo</span>
+    <p><b>Competências</b></p><br>
+    <ul>
+        <li>Equações Diferenciais de Primeira Ordem</li>
+        <li>Conhecimento das Leis de Troca de Calor Entre os Corpos</li>
+        <li>Trabalho em Equipe</li>
+        <li>Termômetro a Laser</li>
+    </ul>
+    
+    <p>
+        <b>Curso:</b><br>
+
+        Engenharia(Ciclo Básico) - Modelagem e Simulação do Mundo Físico<br>
+
+    </p>
+    <p>
+        <b>Data de Início/Fim do Semestre:</b><br>
+
+        12/04/2016 até 2/05/16 - 1º Semestre<br>
+
+    </p>
+    <p> 
+        <b>Descrição Completa:</b><br>
+
+        Em noso segundo projeto de Modelagem e Simulação, 
+        deveríamos escolher entre um sistema térmico ou um 
+        sistema farmacocinético para ser nosso modelo. A escolha por uma caipirinha foi 
+        feita devido ao apresso dos membros do grupo pela bebida,
+        e após realizarmos diversos cálculos e validarmos os mesmos 
+        através de um termômetro a laser utilizado para medir a temperatura de uma caipirinha,
+        fomos capazes de obter os dados presentes no cartaz final de nossa apresentação.
+    </p>
 					</div>
 
 			  	</div>
