--- a/Portifólio de Projetos/projetosoftware.html
+++ b/Portifólio de Projetos/projetosoftware.html
@@ -34,23 +34,26 @@
 
 				<div class="card col s12">
                     <div class="card-image">
-                        <img src="Fotos/ponte.jpg">
+                        <img src="Fotos/destaques/software.png">
                     </div>
 
 
 					<div class="card-content">
-					    <span class="card-title activator grey-text text-darken-4">Projeto Legal</span>
-					    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					    <span class="card-title activator grey-text text-darken-4">Tug War - O Melhor jogo do Brasil</span>
+						<br><b>Competências:</b><br>
+						Python, Pygame, Software, Design Gráfico
+						<br><b>Curso:</b><br>
+						Engenharia (Ciclo Básico) - Design de Software
+						<br><b>Data de Início/Fim/Semestre:</b><br>
+						27/04/2016 até 01/06/2016 - 1˚ Semestre
+						<br><b>Descrição completa (com fotos no HTML):</b><br>
+						Tug War é o jogo open-source que surgiu de um simples conceito: fazer um jogo simples, bonito e competitivo. Com personagens da cultura pop feitos à mão e um visual retrô, o jogo exalta a simples competição de quem consegue apertar certas teclas no teclado mais rapidamente, podendo ser jogado tanto online por LAN quanto no mesmo computador. O jogo foi desenvolvido para a matéria de Design de Software pelo trio Guilherme Schoueri, Frederico Curti e Lucas Fontenla</p>
 					</div>
 
 			  	</div>
 
 		  	</div>
-
-
-
-
-            <a class="waves-effect waves-light btn-large gunmetal margin-40" href="index.html">Página Inicial</a><br><br>
+            <a class="waves-effect waves-light btn-large orange darken-4 margin-40" href="index.html">Página Inicial</a><br><br>
 
 
 
