--- a/Portifólio de Projetos/Estacao.html
+++ b/Portifólio de Projetos/Estacao.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="owl-carousel/owl.carousel.min.css">
         <link rel="stylesheet" href="owl-carousel/owl.theme.css">
         <link rel="stylesheet" href="owl-carousel/owl.transitions.css">
-		<title>Projeto</title>
+		<title>Estacao</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/style.css">
 		<!-- Compiled and minified CSS -->
@@ -39,8 +39,47 @@
 
 
 					<div class="card-content">
-					    <span class="card-title activator grey-text text-darken-4">Projeto Legal</span>
-					    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					    <span class="card-title activator grey-text text-darken-4">Estação Meteorológica</span>
+                                    
+        <p><b>Competências:</b></p><br>
+        <ul>
+
+        <li>Protoboard</li>
+        <li>Noções do Cálculo de incertezas do LM35 e do DHT22</li>
+        <li>Trabalho em Equipe</li>
+        <li>Jumpers</li>
+        <li>Multímetro</li>
+        <li>Analog Discovery</li>
+        <li>Fornos</li>
+        <li>BMP 180</li>
+        <li>Monitor de LCD</li>
+        <li>Fresadora e Noções de seu Funcionamento</li>
+        <li>Noções de Solda</li>
+        <li>Programa Fritzing</li>
+        <
+    </ul>
+    <p>
+        <b>Curso:</b><br>
+
+        Engenharia(Ciclo Básico) - Instrumentação e Medição
+    </p>
+    <p>
+        <b>Data de Início/Fim do Semestre:<b><br>
+
+        20/05/2016 até 15/06/16 - 1º Semestre
+    </p>
+    <p> 
+        <b>Descrição Completa:</b><br>
+
+        Nos foi designada a tarefa de construir uma estação meteorológica em gruopos de três alunos.
+        Quando concluído, o projeto deveria ser capaz de medir a temperatura, a umidade, 
+        e o nível de pressão do ambiente em questão.
+        A estação contaria com os componentes citados acima, e, por fim, um relatório do processo deveria ser apresentado,
+        processo esse que incluía a montagem do circuito na protoboard, a calibração dos sensores
+        em questão nos laboratórios do Insper, e
+        uma montagem no Frtzing do circuito para que o mesmo pudesse ser transferido a uma placa de cobre.
+    </p>
+					    
 					</div>
 
 			  	</div>
