--- a/Portifólio de Projetos/projetomodelagem.html
+++ b/Portifólio de Projetos/projetomodelagem.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -34,23 +34,26 @@
 
 				<div class="card col s12">
                     <div class="card-image">
-                        <img src="Fotos/ponte.jpg">
+                        <img src="Fotos/destaques/mod2.png">
                     </div>
 
 
 					<div class="card-content">
-					    <span class="card-title activator grey-text text-darken-4">Projeto Legal</span>
-					    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					    <span class="card-title activator grey-text text-darken-4">Simulação de sistema físico: Arco e flecha</span>
+						<br><b>Competências:</b><br>
+						Python, Física, Matemática
+						<br><b>Curso:</b><br>
+						Engenharia (Ciclo Básico) - Modelagem e Simulação do Mundo físico
+						<br><b>Data de Início/Fim/Semestre:</b><br>
+						10/04/2016 até 15/05/2016 - 1˚ Semestre
+						<br><b>Descrição completa:</b><br>
+						lorem ipsum</p>
 					</div>
 
 			  	</div>
 
 		  	</div>
-
-
-
-
-            <a class="waves-effect waves-light btn-large gunmetal margin-40" href="index.html">Página Inicial</a><br><br>
+            <a class="waves-effect waves-light btn-large orange darken-4 margin-40" href="index.html">Página Inicial</a><br><br>
 
 
 
